# cmake_practice

./: CMakeLists.txt  digraphpr.cpp  entry.cpp  graphpr.txt  practice_build.sh
include/: checkCycle.h  common.h  depthFirstOrder.h  digraphpr.h  kosa.h
src/checkCycle/: CMakeLists.txt  checkCycle.cpp
src/depthFirstOrder/: CMakeLists.txt  depthFirstOrder.cpp
src/digraphpr/: CMakeLists.txt  digraphpr.cpp
src/kosa/: CMakeLists.txt  kosa.cpp
